# todo

./: .gitignore  README.md  mkdocs.yml
.github/workflows/: deploy-pages.yml  mkdocs-build-on-label.yml
backend/: app.py  pyproject.toml  test_app.py
docs/: architecture.md  coding-guidelines.md  index.md  project-structure.md  tech-stack.md
frontend/: package-lock.json  package.json
frontend/app/: page.tsx
frontend/tests/: todo.spec.ts
