[project]
name = "backend"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.1.2",
    "flask-cors>=6.0.1",
]

[dependency-groups]
dev = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.7.0",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]

[tool.pytest.ini_options]
pythonpath = [
    "."
]
